# warp-test

./: .gitignore  README.md  main.py  os  pyproject.toml
src/: __init__.py  config.py  excel.py  excel_safe.py  get_files.py  get_folders.py  process_excel.py  read_excel.py  read_workbooks.py  utils.py
test/: excel_generator.py  get_schema.py  sample_data.py  verify_workbook.py
tests/: test_process_excel.py
