[project]
name = "warp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.1.0",
    "odf>=0.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-calamine>=0.3.2",
    "pyxlsb>=1.0.10",
    "xlrd>=2.0.1",
]
